PHP-React-Stack/db.yml
apiVersion: v1
kind: Service 
metadata:
  name: mysql
  namespace: php-react-stack
  labels:
    app: mysql  
spec:
   selector:
      app: mysql
   ports:
      - protocol: TCP
        port: 3306
        targetPort: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
  namespace: php-react-stack  
spec:
   serviceName: mysql
   replicas: 1
   selector:
    matchLabels:
      app: mysql
   template:
    metadata:
      labels:
        app: mysql
        selector: mysql
    spec:
      containers:
        - name: mysql-container
          image: FROM mysql:latest
          ports: 
            - containerPort: 3306
          volumeMounts:
            - name: pvc
              mountPath: /data/db
   volumeClaimTemplates:
      - metadata:
          name: pvc
        spec: 
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 1Gi
